:memo: docs: mainly writing docs, updated some scripts too
made a bunch of updates to the docs and some updates to scripts as well.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,11 +11,13 @@
     "esdoc",
     "esdocs",
     "gitmoji",
+    "gitmojis",
     "iname",
     "modclean",
     "oxlint",
     "quickfix",
     "shieldio",
+    "Shortcode",
     "snyk",
     "upgradeps"
   ],
