--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "build:devdeps2": "grep -Fxv -f <(cat d) <(cat dd) | awk '{print $1 > \"dd\"}'",
     "build:devdeps:badges": "bun run build:deps && bun run build:devdeps1 && bun run build:devdeps2 && cat dd | xargs npx update-badge --behind  && rm d dd",
     "clean": "rm -rf node_modules",
-    "cm": "git pull && node repo_management_files/extractFileScopes.js && npm install && git add . && bun git:all &&  cz",
+    "cm:merge": "node repo_management_files/extractFileScopes.js && npm install && git add . && bun git:all &&  cz",
+    "cm": "git pull && bun cm:merge",
     "dep:check": "bunx upgradeps && npm outdated | xargs && bunx npm-check-updates && bunx check-dependencies && bun ./node_modules/npm-check/bin/cli.js -s | xargs && npm audit",
     "dep:skip": "bunx upgradeps -s semantic-release",
     "dep:update:all": "bunx upgradeps -u -f -s semantic-release,eslint",
@@ -85,7 +86,7 @@
     "dev:pre": "bun run upgrade:full && bun rebuild && bun run dep:update:all && echo \"YOU CAN ALSO RUN npm-check TO SEE ADDITIONAL DEPENDENCY UPDATES\" && npm i && bun run depcheck && bun run prune:mod && bun run license:summary && bun format && bun run security",
     "dev:win": "bun i && bun concurrently -k \"bun run hot-reload & start http://127.0.0.1:3000\" \"bun run dev:post\"",
     "dev:wsl": "bun i && bun concurrently -k \"bun run hot-reload & wslview http://127.0.0.1:3000\" \"bun run dev:post\"",
-    "docs": "echo building typedocs; rm -f ./docs/typedocs/coverage.svg && bun typedoc --validation.notDocumented --plugin typedoc-plugin-coverage --plugin typedoc-plugin-extras --options typedoc.json ./src/app.ts",
+    "docs": "echo building typedocs && bunx typedoc --validation.notDocumented --plugin typedoc-plugin-coverage --plugin typedoc-plugin-extras --options typedoc.json",
     "docs:publish": "bunx gh-pages -b gh-pages -d ./docs/typedocs",
     "format": "sort-package-json && bun prettier --write . --cache --cache-strategy metadata --log-level log | grep -v \"unchanged\" | xargs",
     "format:git:modified": "bun prettier --write $(git diff --name-only --diff-filter d | grep '.ts$' | xargs)",
@@ -112,6 +113,7 @@
     "reinstall": "bun run clean && bun install",
     "release": "semantic-release --no-ci",
     "release:ci": "semantic-release",
+    "release:dry": "semantic-release --dry-run",
     "security": "bunx snyk code test --all-projects || echo 'Issues were found please run: bunx snyk code test' && bunx snyk test --all-projects || echo 'Issues were found please run: bunx snyk test'",
     "security:fix": "snyk fix",
     "test": "node_modules/jest/bin/jest.js",
@@ -137,45 +139,40 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintignore",
         ".eslintrc.json",
+        ".eslintignore",
         ".gitignore",
         ".prettierignore",
         ".prettierrc.json",
         "license",
-        "readme-api.md",
         "readme.md",
+        "readme-api.md",
         "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
-        "emojitypescommitmessages.txt",
         "jest.config.json",
         "package-lock.json",
         "package.json",
         "release.config.ts",
         "renovate.json",
-        "tsconfig.json",
         "typedoc.json",
+        "tsconfig.json",
         ".vscode/settings.json",
-        "public/.gitkeep",
+        "repo_management_files/auditchecklist.md",
         "repo_management_files/branchnamingconventions.md",
+        "repo_management_files/cz-emoji-template-extract.js",
         "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
+        "repo_management_files/errorswarningsresolutions.md",
         "repo_management_files/extractfilescopes.js",
+        "repo_management_files/fileswithgitmojis.md",
         "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
-        "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/depcheck.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
+        "repo_management_files/issues.sh",
+        "repo_management_files/usefultipsandtricks.md",
         ".husky/commit-msg",
         ".husky/pre-commit",
         ".husky/prepare-commit-msg",
@@ -194,27 +191,36 @@
         ".husky/_/pre-push",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
+        "public/.gitkeep",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/depcheck.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
         "src/app.ts",
         "src/bin/.gitkeep",
         "src/configs/.gitkeep",
         "src/controllers/.gitkeep",
-        "src/models/.gitkeep",
         "src/middleware/.gitkeep",
         "src/routes/.gitkeep",
-        "src/plugins/.gitkeep",
-        "src/views/.gitkeep",
+        "src/models/.gitkeep",
         "src/utils/.gitkeep",
-        "test/.gitkeep",
+        "src/views/.gitkeep",
+        "src/plugins/.gitkeep",
         "test/app.test.ts",
+        "test/.gitkeep",
         "test/configs/.gitkeep",
         "test/bin/.gitkeep",
         "test/middleware/.gitkeep",
         "test/controllers/.gitkeep",
-        "test/plugins/.gitkeep",
         "test/models/.gitkeep",
         "test/routes/.gitkeep",
-        "test/views/.gitkeep",
-        "test/utils/.gitkeep"
+        "test/plugins/.gitkeep",
+        "test/utils/.gitkeep",
+        "test/views/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
