:bug: fix: updated my $PATH variable. Check for bug
testing if my update caused the same bug

--- a/package.json
+++ b/package.json
@@ -146,18 +146,19 @@
         ".prettierrc.json",
         "license",
         "readme.md",
-        "readme-api.md",
-        "commit-template.hbs",
         "commitlint.config.ts",
+        "commit-template.hbs",
+        "readme-api.md",
         "default-template.hbs",
         "jest.config.json",
         "package-lock.json",
         "package.json",
         "release.config.ts",
         "renovate.json",
-        "typedoc.json",
         "tsconfig.json",
+        "typedoc.json",
         ".vscode/settings.json",
+        "public/.gitkeep",
         "repo_management_files/auditchecklist.md",
         "repo_management_files/branchnamingconventions.md",
         "repo_management_files/cz-emoji-template-extract.js",
@@ -169,58 +170,57 @@
         "repo_management_files/fileswithgitmojis.md",
         "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
+        "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
-        "repo_management_files/issues.sh",
         "repo_management_files/usefultipsandtricks.md",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/test.yml",
+        ".github/workflows/depcheck.yml",
         ".husky/commit-msg",
         ".husky/pre-commit",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
-        ".husky/_/h",
         ".husky/_/post-applypatch",
         ".husky/_/post-checkout",
+        ".husky/_/h",
         ".husky/_/post-commit",
-        ".husky/_/post-merge",
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
         ".husky/_/pre-commit",
-        ".husky/_/pre-push",
         ".husky/_/pre-rebase",
+        ".husky/_/post-merge",
         ".husky/_/prepare-commit-msg",
-        "public/.gitkeep",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/depcheck.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
+        ".husky/_/pre-push",
         "src/app.ts",
         "src/bin/.gitkeep",
         "src/configs/.gitkeep",
+        "src/models/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/routes/.gitkeep",
+        "src/views/.gitkeep",
         "src/controllers/.gitkeep",
         "src/middleware/.gitkeep",
-        "src/routes/.gitkeep",
-        "src/models/.gitkeep",
         "src/utils/.gitkeep",
-        "src/views/.gitkeep",
-        "src/plugins/.gitkeep",
         "test/app.test.ts",
         "test/.gitkeep",
-        "test/configs/.gitkeep",
         "test/bin/.gitkeep",
-        "test/middleware/.gitkeep",
+        "test/configs/.gitkeep",
         "test/controllers/.gitkeep",
         "test/models/.gitkeep",
-        "test/routes/.gitkeep",
-        "test/plugins/.gitkeep",
+        "test/middleware/.gitkeep",
         "test/utils/.gitkeep",
-        "test/views/.gitkeep"
+        "test/routes/.gitkeep",
+        "test/views/.gitkeep",
+        "test/plugins/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
