:bug: fix: fixed script to use ' instead of `
I think this will fix the error

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "dep:update:check": "bunx upgradeps",
     "dep:update:skip": "bunx upgradeps -u -s",
     "depcheck": "bunx depcheck | xargs",
-    "depcheck:ci": "echo NOTE: If this errors out please consider removing dependencies from package.json or adding them to the .depcheckrc.json `ignores` array && bunx depcheck",
+    "depcheck:ci": "echo NOTE: If this errors out please consider removing dependencies from package.json or adding them to the .depcheckrc.json 'ignores' array && bunx depcheck",
     "dev": "bun i && bun run build:bun && bun concurrently -k \"bun run hot-reload\" \"bun run live-reload\" \"bun run format:watch\" \"bun run test:watch:fast\"",
     "dev:all": "git pull && bun run dev:pre && bun run lint:quick && bun run lint:ox && bun run dev:build",
     "dev:build": "bun run build && bun run docs && bun dev",
@@ -139,16 +139,16 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintrc.json",
         ".eslintignore",
+        ".eslintrc.json",
         ".gitignore",
         ".prettierignore",
         ".prettierrc.json",
         "license",
-        "readme.md",
-        "commitlint.config.ts",
-        "commit-template.hbs",
         "readme-api.md",
+        "readme.md",
+        "commit-template.hbs",
+        "commitlint.config.ts",
         "default-template.hbs",
         "jest.config.json",
         "package-lock.json",
@@ -168,59 +168,59 @@
         "repo_management_files/errorswarningsresolutions.md",
         "repo_management_files/extractfilescopes.js",
         "repo_management_files/fileswithgitmojis.md",
-        "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
-        "repo_management_files/issues.sh",
+        "repo_management_files/genericcommitmessages.md",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
         "repo_management_files/usefultipsandtricks.md",
+        "repo_management_files/issues.sh",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/test.yml",
         ".github/workflows/depcheck.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
         ".husky/commit-msg",
         ".husky/pre-commit",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
+        ".husky/_/h",
         ".husky/_/post-applypatch",
         ".husky/_/post-checkout",
-        ".husky/_/h",
         ".husky/_/post-commit",
+        ".husky/_/post-merge",
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
         ".husky/_/pre-commit",
-        ".husky/_/pre-rebase",
-        ".husky/_/post-merge",
-        ".husky/_/prepare-commit-msg",
         ".husky/_/pre-push",
+        ".husky/_/pre-rebase",
+        ".husky/_/prepare-commit-msg",
         "src/app.ts",
         "src/bin/.gitkeep",
+        "src/controllers/.gitkeep",
         "src/configs/.gitkeep",
+        "src/middleware/.gitkeep",
         "src/models/.gitkeep",
         "src/plugins/.gitkeep",
         "src/routes/.gitkeep",
-        "src/views/.gitkeep",
-        "src/controllers/.gitkeep",
-        "src/middleware/.gitkeep",
         "src/utils/.gitkeep",
-        "test/app.test.ts",
+        "src/views/.gitkeep",
         "test/.gitkeep",
+        "test/app.test.ts",
         "test/bin/.gitkeep",
         "test/configs/.gitkeep",
-        "test/controllers/.gitkeep",
-        "test/models/.gitkeep",
         "test/middleware/.gitkeep",
-        "test/utils/.gitkeep",
+        "test/models/.gitkeep",
+        "test/plugins/.gitkeep",
+        "test/controllers/.gitkeep",
         "test/routes/.gitkeep",
-        "test/views/.gitkeep",
-        "test/plugins/.gitkeep"
+        "test/utils/.gitkeep",
+        "test/views/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
