:rotating_light: lint(.vscode/settings.json): adding repo specific words to workspace cSpell.words array
added flagged words that are specific to the repository and are correctly spelt acronyms or file names

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,41 @@
 {
   "cSpell.words": [
     "ACDMRTUXB",
+    "applypatch",
+    "auditchecklist",
     "automerge",
     "bento",
+    "branchnamingconventions",
+    "bunx",
     "cacache",
     "commitlint",
     "compat",
     "debendabot",
     "depcheckrc",
+    "devdeps",
+    "directorystructuredocument",
+    "errorswarningsresolutions",
     "esdoc",
     "esdocs",
+    "extractfilescopes",
+    "fileswithgitmojis",
+    "genericcommitmessages",
     "gitmoji",
     "gitmojis",
+    "gitmojisemver",
     "iname",
+    "Jebarpg",
+    "lockb",
     "modclean",
+    "outdir",
     "oxlint",
+    "packagejsondocument",
     "quickfix",
     "shieldio",
     "Shortcode",
     "snyk",
-    "upgradeps"
+    "upgradeps",
+    "wslview"
   ],
   "spellright.language": ["en"],
   "spellright.documentTypes": ["latex", "plaintext"]
