:construction_worker: ci(.husky/pre-commit): added pretty-quick to pre-commmit and to .depcheckrc.json
added a package to pre-commit and updated dependabot to update github actions and ignore eslint and semantic-release

--- a/.depcheckrc.json
+++ b/.depcheckrc.json
@@ -4,6 +4,7 @@
     "jest-snapshot",
     "quick-lint-js",
     "prettier-plugin-organize-imports",
+    "pretty-quick",
     "typedoc",
     "typedoc-plugin-coverage",
     "typedoc-plugin-extras",
