--- a/package.json
+++ b/package.json
@@ -139,22 +139,22 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintignore",
         ".eslintrc.json",
+        ".eslintignore",
         ".gitignore",
         ".prettierignore",
-        ".prettierrc.json",
         "license",
         "readme-api.md",
+        ".prettierrc.json",
         "readme.md",
-        "commitlint.config.ts",
+        "commit-template.hbs",
         "default-template.hbs",
+        "commitlint.config.ts",
         "jest.config.json",
         "package-lock.json",
         "package.json",
-        "commit-template.hbs",
-        "renovate.json",
         "release.config.ts",
+        "renovate.json",
         "tsconfig.json",
         "typedoc.json",
         ".vscode/settings.json",
@@ -164,20 +164,28 @@
         "repo_management_files/cz-emoji-template-extract.js",
         "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
+        "repo_management_files/directorystructuredocument.md",
         "repo_management_files/errorswarningsresolutions.md",
         "repo_management_files/extractfilescopes.js",
         "repo_management_files/fileswithgitmojis.md",
         "repo_management_files/genericcommitmessages.md",
-        "repo_management_files/directorystructuredocument.md",
+        "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/initializationinfo.md",
         "repo_management_files/issues.sh",
-        "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
         "repo_management_files/usefultipsandtricks.md",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/depcheck.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
+        ".husky/commit-msg",
         ".husky/pre-commit",
         ".husky/prepare-commit-msg",
-        ".husky/commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
@@ -189,39 +197,31 @@
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
-        ".husky/_/pre-commit",
         ".husky/_/pre-push",
         ".husky/_/pre-rebase",
+        ".husky/_/pre-commit",
         ".husky/_/prepare-commit-msg",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/depcheck.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
         "src/app.ts",
-        "src/bin/.gitkeep",
         "src/configs/.gitkeep",
-        "src/models/.gitkeep",
-        "src/controllers/.gitkeep",
         "src/middleware/.gitkeep",
+        "src/bin/.gitkeep",
         "src/plugins/.gitkeep",
+        "src/controllers/.gitkeep",
         "src/routes/.gitkeep",
-        "src/utils/.gitkeep",
+        "src/models/.gitkeep",
         "src/views/.gitkeep",
-        "test/.gitkeep",
+        "src/utils/.gitkeep",
         "test/app.test.ts",
+        "test/.gitkeep",
         "test/configs/.gitkeep",
-        "test/controllers/.gitkeep",
-        "test/bin/.gitkeep",
         "test/middleware/.gitkeep",
-        "test/models/.gitkeep",
         "test/plugins/.gitkeep",
         "test/routes/.gitkeep",
+        "test/models/.gitkeep",
+        "test/bin/.gitkeep",
+        "test/views/.gitkeep",
         "test/utils/.gitkeep",
-        "test/views/.gitkeep"
+        "test/controllers/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
@@ -271,6 +271,7 @@
     "oxlint": "0.6.1",
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.0.0",
+    "pretty-quick": "^4.0.0",
     "quick-lint-js": "3.2.0",
     "semantic-release": "22.0.12",
     "semantic-release-config-gitmoji": "1.5.3",
