--- a/package.json
+++ b/package.json
@@ -139,20 +139,20 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintrc.json",
         ".eslintignore",
+        ".eslintrc.json",
         ".gitignore",
         ".prettierignore",
+        ".prettierrc.json",
         "license",
         "readme-api.md",
-        ".prettierrc.json",
         "readme.md",
         "commit-template.hbs",
-        "default-template.hbs",
         "commitlint.config.ts",
+        "default-template.hbs",
         "jest.config.json",
-        "package-lock.json",
         "package.json",
+        "package-lock.json",
         "release.config.ts",
         "renovate.json",
         "tsconfig.json",
@@ -160,68 +160,68 @@
         ".vscode/settings.json",
         "public/.gitkeep",
         "repo_management_files/auditchecklist.md",
-        "repo_management_files/branchnamingconventions.md",
         "repo_management_files/cz-emoji-template-extract.js",
         "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
-        "repo_management_files/errorswarningsresolutions.md",
         "repo_management_files/extractfilescopes.js",
+        "repo_management_files/errorswarningsresolutions.md",
         "repo_management_files/fileswithgitmojis.md",
-        "repo_management_files/genericcommitmessages.md",
+        "repo_management_files/branchnamingconventions.md",
         "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/initializationinfo.md",
-        "repo_management_files/issues.sh",
+        "repo_management_files/genericcommitmessages.md",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
         "repo_management_files/usefultipsandtricks.md",
+        "repo_management_files/issues.sh",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
-        ".github/workflows/depcheck.yml",
         ".github/workflows/docs.yml",
         ".github/workflows/lint.yml",
         ".github/workflows/pr.yml",
         ".github/workflows/release.yml",
+        ".github/workflows/depcheck.yml",
         ".github/workflows/test.yml",
         ".husky/commit-msg",
         ".husky/pre-commit",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
-        ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
         ".husky/_/h",
         ".husky/_/post-applypatch",
+        ".husky/_/applypatch-msg",
         ".husky/_/post-checkout",
-        ".husky/_/post-commit",
         ".husky/_/post-merge",
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
-        ".husky/_/pre-push",
+        ".husky/_/post-commit",
         ".husky/_/pre-rebase",
         ".husky/_/pre-commit",
         ".husky/_/prepare-commit-msg",
+        ".husky/_/pre-push",
         "src/app.ts",
-        "src/configs/.gitkeep",
-        "src/middleware/.gitkeep",
         "src/bin/.gitkeep",
-        "src/plugins/.gitkeep",
         "src/controllers/.gitkeep",
+        "src/middleware/.gitkeep",
         "src/routes/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/configs/.gitkeep",
         "src/models/.gitkeep",
         "src/views/.gitkeep",
         "src/utils/.gitkeep",
         "test/app.test.ts",
         "test/.gitkeep",
+        "test/controllers/.gitkeep",
+        "test/bin/.gitkeep",
         "test/configs/.gitkeep",
         "test/middleware/.gitkeep",
         "test/plugins/.gitkeep",
+        "test/views/.gitkeep",
         "test/routes/.gitkeep",
         "test/models/.gitkeep",
-        "test/bin/.gitkeep",
-        "test/views/.gitkeep",
-        "test/utils/.gitkeep",
-        "test/controllers/.gitkeep"
+        "test/utils/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
