:memo: docs(readme.md): updated documents
committing all changes

--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "dev:mac": "bun i && bun concurrently -k \"bun run hot-reload & open http://127.0.0.1:3000\" \"bun run dev:post\"",
     "dev:node": "bun i && bun run build && bun concurrently -k \"nodemon ./dist/server.js localhost 8080\" \"bun run live-reload\" \"bun run format:watch\" \"bun run test:watch:fast\"",
     "dev:post": "bun concurrently -k \"bun run live-reload\" \"bun run format:watch\" \"bun run test:watch:fast\"",
-    "dev:pre": "bun run upgrade:full && bun rebuild && bun run dep:update:all && echo \"YOU CAN ALSO RUN npm-check TO SEE ADDITIONAL DEPENDENCY UPDATES\" && npm i && bun run depcheck && bun run prune:mod && bun run license:summary && bun format && bun run security",
+    "dev:pre": "bun run upgrade:full && bun rebuild && bun run dep:update:all && echo \"YOU CAN ALSO RUN npm-check TO SEE ADDITIONAL DEPENDENCY UPDATES\" && npm i --legacy-peer-deps && bun run depcheck && bun run prune:mod && bun run license:summary && bun format && bun run security",
     "dev:win": "bun i && bun concurrently -k \"bun run hot-reload & start http://127.0.0.1:3000\" \"bun run dev:post\"",
     "dev:wsl": "bun i && bun concurrently -k \"bun run hot-reload & wslview http://127.0.0.1:3000\" \"bun run dev:post\"",
     "docs": "echo building typedocs && bunx typedoc --validation.notDocumented --plugin typedoc-plugin-coverage --plugin typedoc-plugin-extras --options typedoc.json",
@@ -145,83 +145,83 @@
         ".prettierignore",
         ".prettierrc.json",
         "license",
-        "readme-api.md",
         "readme.md",
-        "commit-template.hbs",
         "commitlint.config.ts",
+        "commit-template.hbs",
+        "readme-api.md",
         "default-template.hbs",
         "jest.config.json",
         "package.json",
-        "package-lock.json",
         "release.config.ts",
         "renovate.json",
-        "tsconfig.json",
+        "package-lock.json",
         "typedoc.json",
+        "tsconfig.json",
         ".vscode/settings.json",
         "public/.gitkeep",
         "repo_management_files/auditchecklist.md",
-        "repo_management_files/cz-emoji-template-extract.js",
-        "repo_management_files/cz-emoji-type-extract.js",
-        "repo_management_files/cz-type-extract.js",
-        "repo_management_files/directorystructuredocument.md",
-        "repo_management_files/extractfilescopes.js",
-        "repo_management_files/errorswarningsresolutions.md",
-        "repo_management_files/fileswithgitmojis.md",
         "repo_management_files/branchnamingconventions.md",
+        "repo_management_files/cz-emoji-template-extract.js",
+        "repo_management_files/cz-type-extract.js",
+        "repo_management_files/errorswarningsresolutions.md",
+        "repo_management_files/extractfilescopes.js",
+        "repo_management_files/directorystructuredocument.md",
+        "repo_management_files/cz-emoji-type-extract.js",
+        "repo_management_files/fileswithgitmojis.md",
+        "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/initializationinfo.md",
-        "repo_management_files/genericcommitmessages.md",
-        "repo_management_files/labels.sh",
-        "repo_management_files/packagejsondocument.md",
-        "repo_management_files/usefultipsandtricks.md",
         "repo_management_files/issues.sh",
+        "repo_management_files/labels.sh",
+        "repo_management_files/usefultipsandtricks.md",
+        "repo_management_files/packagejsondocument.md",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
+        ".github/workflows/depcheck.yml",
         ".github/workflows/docs.yml",
         ".github/workflows/lint.yml",
         ".github/workflows/pr.yml",
         ".github/workflows/release.yml",
-        ".github/workflows/depcheck.yml",
         ".github/workflows/test.yml",
         ".husky/commit-msg",
         ".husky/pre-commit",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
+        ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
         ".husky/_/h",
         ".husky/_/post-applypatch",
-        ".husky/_/applypatch-msg",
         ".husky/_/post-checkout",
-        ".husky/_/post-merge",
+        ".husky/_/post-commit",
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
-        ".husky/_/post-commit",
-        ".husky/_/pre-rebase",
         ".husky/_/pre-commit",
-        ".husky/_/prepare-commit-msg",
+        ".husky/_/post-merge",
         ".husky/_/pre-push",
+        ".husky/_/pre-rebase",
+        ".husky/_/prepare-commit-msg",
+        "test/app.test.ts",
+        "test/.gitkeep",
+        "test/bin/.gitkeep",
+        "test/middleware/.gitkeep",
+        "test/configs/.gitkeep",
+        "test/controllers/.gitkeep",
+        "test/routes/.gitkeep",
+        "test/plugins/.gitkeep",
+        "test/utils/.gitkeep",
+        "test/models/.gitkeep",
+        "test/views/.gitkeep",
         "src/app.ts",
         "src/bin/.gitkeep",
         "src/controllers/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/routes/.gitkeep",
-        "src/plugins/.gitkeep",
         "src/configs/.gitkeep",
         "src/models/.gitkeep",
-        "src/views/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/plugins/.gitkeep",
         "src/utils/.gitkeep",
-        "test/app.test.ts",
-        "test/.gitkeep",
-        "test/controllers/.gitkeep",
-        "test/bin/.gitkeep",
-        "test/configs/.gitkeep",
-        "test/middleware/.gitkeep",
-        "test/plugins/.gitkeep",
-        "test/views/.gitkeep",
-        "test/routes/.gitkeep",
-        "test/models/.gitkeep",
-        "test/utils/.gitkeep"
+        "src/routes/.gitkeep",
+        "src/views/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
@@ -290,7 +290,7 @@
     "@semantic-release/npm": {
       "cacache": {
         "tar": "7.4.0",
-        "glob": "^10.0.0"
+        "glob": "^11.0.0"
       }
     }
   }
