--- a/.github/workflows/depcheck.yml
+++ b/.github/workflows/depcheck.yml
@@ -14,21 +14,21 @@ jobs:
       - name: 📂 Check out Git repository
         uses: actions/checkout@v4
 
-      - name: 🛠️ Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node }}
+      #- name: 🛠️ Set up Node.js
+      #  uses: actions/setup-node@v4
+      #  with:
+      #    node-version: ${{ matrix.node }}
 
       - name: 🛠️ Set up Bun.sh
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
 
-      - name: 📦 Install Node.js dependencies with Node.js
-        run: npm ci
+      #- name: 📦 Install Node.js dependencies with Node.js
+      #  run: npm ci
 
       - name: 📦 Install Node.js dependencies with Bun
-        run: bun install --frozen-lockfile
+        run: bun install
 
       - name: 🔍🔗 Check Project Unused Dependencies
         run: bun run depcheck:ci
