--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,4 +49,4 @@ jobs:
       #    # env_vars: OS,NODE  # optional
       #    name: ☂️ codecov-umbrella # optional
       #    fail_ci_if_error: true # optional (default = false)
-          verbose: true # optional (default = false)
+      #    verbose: true # optional (default = false)
