--- a/package.json
+++ b/package.json
@@ -281,7 +281,8 @@
     "ts-jest": "29.2.3",
     "typedoc": "0.26.5",
     "typedoc-plugin-coverage": "3.3.0",
-    "typedoc-plugin-extras": "^3.1.0"
+    "typedoc-plugin-extras": "^3.1.0",
+    "validate-branch-name": "^1.3.1"
   },
   "publishConfig": {
     "access": "public"
