--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
     "dep:update:all": "bunx upgradeps -u -f -s semantic-release,eslint",
     "dep:update:check": "bunx upgradeps",
     "dep:update:skip": "bunx upgradeps -u -s",
-    "depcheck": "bunx depcheck | xargs",
-    "depcheck:ci": "echo NOTE: If this errors out please consider removing dependencies from package.json or adding them to the .depcheckrc.json 'ignores' array && bunx depcheck",
+    "depcheck:run": "bunx depcheck | xargs",
+    "depcheck:ci": "echo NOTE: If this errors out please consider removing dependencies from package.json or adding them to the .depcheckrc.json 'ignores' array && bunx depcheck:run",
     "dev": "bun i && bun run build:bun && bun concurrently -k \"bun run hot-reload\" \"bun run live-reload\" \"bun run format:watch\" \"bun run test:watch:fast\"",
     "dev:all": "git pull && bun run dev:pre && bun run lint:quick && bun run lint:ox && bun run dev:build",
     "dev:build": "bun run build && bun run docs && bun dev",
